src/test/deca/context/valid/oracle/use_defined_variable_in_else.deca
{
    int i = 1;
    if(false){
    } else if(false){
    } else {
        println(i+2);
    }
}