src/test/deca/context/invalid/oracle/condition_while_assign.deca
{
    while(i = 1 < 2){
        print();
    }
}